--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "babel-preset-env": "^1.7.0",
     "bootstrap": "^4.5.0",
     "core-js": "^3.6.5",
+    "material-design-icons-iconfont": "^5.0.1",
     "moment": "^2.27.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vue2-filters": "^0.11.0",
+    "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -27,11 +29,16 @@
     "css-loader": "^3.6.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^4.14.1",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-vuetify": "^2.0.6",
     "vue-template-compiler": "^2.6.11",
-    "vuetify": "^2.3.3"
+    "vuetify": "^2.3.3",
+    "vuetify-loader": "^1.3.0",
+    "webpack": "^4.43.0"
   }
 }
